// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGrid.js test suite should match snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Jurassic Park
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`GifGrid.js test suite should show items when images are loaded 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Jurassic Park
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="1234"
      key="1234"
      title="Triceracops"
      url="https://triceracops.png"
    />
  </div>
</Fragment>
`;
